syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService{
    rpc GetDiscount(GetDiscountRequest) returns (GetDiscountResponse){}
    rpc GetDiscounts(GetDiscountsRequest) returns (GetDiscountsResponse){}
    rpc CreateDiscount(Coupon) returns (Coupon){}
    rpc UpdateDiscount(Coupon) returns (UpdateDiscountResponse){}
    rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse){}
}

message Coupon{
    int32 id=1;
    string productId =2;
    string productName =3;
    string description =4;
    int32 amount=5;
}

message GetDiscountRequest{
    string productId =1;
}
message GetDiscountsRequest{
}
// message CreateDiscountRequest{
//     Coupon Coupon=1;
// }
// message UpdateDiscountRequest{
//     Coupon Coupon=1;
// }
message DeleteDiscountRequest{
    string productId =1;
}

message GetDiscountResponse{
    Coupon Coupon=1;
}
message GetDiscountsResponse{
    repeated Coupon Coupons=1;
}
// message CreateDiscountResponse{
//     Coupon Coupon=1;
// }
message UpdateDiscountResponse{
    bool created=1;
}
message DeleteDiscountResponse{
    bool deleted=1;
}




